--- a/greg/privacy/index.html
+++ b/greg/privacy/index.html
@@ -45,7 +45,7 @@
 					gathering any kind data.
 				</li>
 				<li>
-					Posting of said groups won't lead to any ad tailoring or
+					Posting on said groups won't lead to any ad tailoring or
 					cookies.
 				</li>
 			</ul>
