--- a/greg/privacy/index.html
+++ b/greg/privacy/index.html
@@ -1,55 +1,56 @@
 <html>
 	<head>
-		<!-- Latest compiled and minified CSS -->
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	
 		<link
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		/>
 
-		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-		<!-- Popper JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
-		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-        <div class="jumbotron">
-		<h1 class="container">Greg Privacy Policy</h1>
+		<div class="jumbotron">
+			<h1 class="container">Greg Privacy Policy</h1>
 
-		<div class="container">
-			<h3>What we do?</h3>
-			<p>
-				At Greg, we extract facebook group posts, analyse its sentiment
-				and record your post link for greivance redressals We can
-				access/exctract post from groups only if the said group is
-				linked to our Page by the will of the group admin. We work in
-				providing a better turn around time of the publics issues
-			</p>
+			<div class="container">
+				<h3>What we do?</h3>
+				<p>
+					At Greg, we extract facebook group posts, analyse its
+					sentiment and record your post link for greivance redressals
+					We can access/exctract post from groups only if the said
+					group is linked to our Page by the will of the group admin.
+					We work in providing a better turn around time of the
+					publics issues
+				</p>
 
-			<h3>Privacy Policy</h3>
-			<ul>
-				<li>We respect your privacy</li>
-				<li>
-					We do not save or share your Facebook Account Details for
-					any purpose
-				</li>
-				<li>
-					Only the post sentiment, link to post, set of hashtags used
-					and tagged location is saved in our database
-				</li>
-				<li>
-					We are not paid by any government or private body in
-					gathering any kind data.
-				</li>
-				<li>
-					Posting on said groups won't lead to any ad tailoring or
-					cookies.
-				</li>
-			</ul>
-        </div>
-    </div>
+				<h3>Privacy Policy</h3>
+				<ul>
+					<li>We respect your privacy</li>
+					<li>
+						We do not save or share your Facebook Account Details
+						for any purpose
+					</li>
+					<li>
+						Only the post sentiment, link to post, set of hashtags
+						used and tagged location is saved in our database
+					</li>
+					<li>
+						We are not paid by any government or private body in
+						gathering any kind data.
+					</li>
+					<li>
+						Posting on said groups won't lead to any ad tailoring or
+						cookies.
+					</li>
+				</ul>
+			</div>
+		</div>
 	</body>
 </html>
