--- a/greg/privacy/index.html
+++ b/greg/privacy/index.html
@@ -23,11 +23,11 @@
 				<h3>What we do?</h3>
 				<p>
 					At Greg, we extract facebook group posts, analyse its
-					sentiment and record your post link for greivance redressals
-					We can access/exctract post from groups only if the said
+					sentiment and record your post link for grievance redressals
+					We can access/extract post from groups only if the said
 					group is linked to our Page by the will of the group admin.
 					We work in providing a better turn around time of the
-					publics issues
+					public's issues
 				</p>
 
 				<h3>Privacy Policy</h3>
